--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "date-fns": "^2.29.3",
     "eslint": "^8.27.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
